# autumn_homework

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-tidy-post.yaml  clang-tidy-review.yaml  tests.yaml
additional_tasks/: CMakeLists.txt
additional_tasks/DSU/: README.md
additional_tasks/MST_with_degree_limit/: README.md
additional_tasks/alien_dictionary/: README.md
additional_tasks/bridge_guards/: README.md
additional_tasks/dag_relaxation/: CMakeLists.txt  README.md
additional_tasks/donation/: README.md
additional_tasks/find_word_chains/: README.md
additional_tasks/graph/: CMakeLists.txt  README.md
additional_tasks/template_task/: CMakeLists.txt  README.md
additional_tasks/template_task/src/: DSU.cpp  DSU.hpp  main.cpp  test.cpp  utils.cpp  utils.hpp
doc/: DSU.md  README.md
lib/: CMakeLists.txt
lib/src/: BellmanFordAlgorithm.cpp  BellmanForlAlgorithm.h  DeikstraAlgorithm.cpp  DeikstraAlgorithm.h  Graph.h  Graph.hpp  GraphDFSIterator.cpp  GraphDFSIterator.h  JonsonAlgorithm.cpp  JonsonAlgorithm.h  Lca.h  NonOrientedGraph.cpp  NonOrientedGraph.h  OrientedGraph.cpp  OrientedGraph.h  RMQ.cpp  RMQ.h  SearchWeakVE.cpp  SearchWeakVE.h  WeightedGraph.cpp  WeightedGraph.h  WeightedNonOrientedGraph.cpp  WeightedNonOrientedGraph.h  WeightedOrientedGraph.cpp  WeightedOrientedGraph.h  WeightedOrientedGraphWithZeroWeight.cpp  WeightedOrientedGraphWithZeroWeight.h  graph.cpp  graph.h  graph.hpp  includes.h  topologicalSort.cpp  topologicalSort.h  util.cpp  util.h  util.hpp  utils.hpp  weighted_graph.hpp
lib/src/graph/: edge.cpp  graph.cpp  graph.hpp  graph_construct.cpp  graph_methods.cpp  vertex.hpp  weighted_graph.hpp
lib/src/graph/for_integral/: edge.cpp  graph_construct.cpp  graph_methods.cpp
lib/src/graph/for_size_t/: edge.cpp  graph_construct.cpp  graph_methods.cpp
lib/src/graph/for_string/: edge.cpp  graph_construct.cpp  graph_methods.cpp
lib/src/lib/: utils.cpp  utils.hpp
sandbox/: CMakeLists.txt
task_01/: CMakeLists.txt  README.md
task_01/src/: a.out  (+18 more)
task_02/: README.md
task_03/: CMakeLists.txt  README.md
task_04/: CMakeLists.txt  README.md
task_05/: CMakeLists.txt  COMMENTS.md  README.md
task_06/: CMakeLists.txt  README.md
(+209 files in other folders)
